[package]
name = "online-game-server"
version = "0.1.0"
edition = "2021"
default-run = "online-game-server"

[[bin]]
name = "online-game-server"
path = "src/main.rs"

[[bin]]
name = "test_database"
path = "test_database.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bincode = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }